--- a/character.html
+++ b/character.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8"   >
+<meta charset="utf-8">
 
 <link rel="stylesheet" href="css/normalize.css" type="text/css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -29,9 +29,11 @@
           </button>
           <img class="header-img" src="images/harrypotter-lightning.jpg">
         </nav>
-      </div>
+    </div>
+    <div class='char-main-content'>
+       
 
-      
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
