added movies information and footer

--- a/character.html
+++ b/character.html
@@ -44,7 +44,7 @@
         
       </div>
       <div class="footer">
-        footer
+        Copyright @2021 All Rights Reserved
       </div>
     </div>
     
