--- a/index.html
+++ b/index.html
@@ -17,83 +17,74 @@
   <div class="header">
     <div class="header-content">
       <div class="logo-container">
-        <!-- https://en.wikipedia.org/wiki/Harry_Potter -->
-        <img class="logo" src="images/harry-potter-logo.svg">
+        <img class="logo" src="images/harry-potter-logo.svg" alt="logo">
       </div>
       <input type="radio" name="slide" id="menu-btn">
       <input type="radio" name="slide" id="cancel-btn">
-      <ul class="nav-links">
+      <div class="nav-links">
         <label for="cancel-btn" class="btn cancel-btn"><i class="fas fa-times"></i></label>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="character.html">Characters</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="character.html">Characters</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+      </div>
       <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
     </div>
   </div>
   <div class="home-container">
 
-
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="slider-img d-block w-100" src="images/Harry-potter-banner1.jpg" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="slider-img d-block w-100" src="images/Harry-potter-banner2.jpeg" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="slider-img d-block w-100" src="images/Harry-potter-banner3.jpg" alt="Third slide">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
     <div class="about-series">
       <div class="home-header">
         About Harry Harry Potter
       </div>
 
       <div class="about-txt">
-        Harry Potter is a series of seven fantasy novels written by British author J. K. Rowling. The novels chronicle
-        the lives of a young wizard, Harry Potter, and his friends Hermione Granger and Ron Weasley, all of whom are
-        students at Hogwarts School of Witchcraft and Wizardry. The main story arc concerns Harry's struggle against
-        Lord Voldemort, a dark wizard who intends to become immortal, overthrow the wizard governing body known as the
-        Ministry of Magic and subjugate all wizards and Muggles (non-magical people).
+        <img class="author-img" src="images/J._K._Rowling.jpg">
+        <div class="author-name">J. K. Rowling</div>
+        <div class="about">
+          Harry Potter is a series of seven fantasy novels written by British author J. K. Rowling. The novels chronicle
+          the lives of a young wizard, Harry Potter, and his friends Hermione Granger and Ron Weasley, all of whom are
+          students at Hogwarts School of Witchcraft and Wizardry. The main story arc concerns Harry's struggle against
+          Lord Voldemort, a dark wizard who intends to become immortal, overthrow the wizard governing body known as the
+          Ministry of Magic and subjugate all wizards and Muggles (non-magical people).
 
-        Since the release of the first novel, Harry Potter and the Philosopher's Stone, on 26 June 1997, the books have
-        found immense popularity, positive reviews, and commercial success worldwide. They have attracted a wide adult
-        audience as well as younger readers and are often considered cornerstones of modern young adult literature.[2]
-        As of February 2018, the books have sold more than 500 million copies worldwide, making them the best-selling
-        book series in history, and have been translated into eighty languages.[3] The last four books consecutively set
-        records as the fastest-selling books in history, with the final installment selling roughly eleven million
-        copies in the United States within twenty-four hours of its release.
+          Since the release of the first novel, Harry Potter and the Philosopher's Stone, on 26 June 1997, the books
+          have
+          found immense popularity, positive reviews, and commercial success worldwide. They have attracted a wide adult
+          audience as well as younger readers and are often considered cornerstones of modern young adult literature.[2]
+          As of February 2018, the books have sold more than 500 million copies worldwide, making them the best-selling
+          book series in history, and have been translated into eighty languages.[3] The last four books consecutively
+          set
+          records as the fastest-selling books in history, with the final installment selling roughly eleven million
+          copies in the United States within twenty-four hours of its release.
 
-        The series was originally published in English by two major publishers, Bloomsbury in the United Kingdom and
-        Scholastic Press in the United States. A play, Harry Potter and the Cursed Child, based on a story co-written by
-        Rowling, premiered in London on 30 July 2016 at the Palace Theatre, and its script was published by Little,
-        Brown. The original seven books were adapted into an eight-part namesake film series by Warner Bros. Pictures,
-        which is the third highest-grossing film series of all time as of February 2020. In 2016, the total value of the
-        Harry Potter franchise was estimated at $25 billion,[4] making Harry Potter one of the highest-grossing media
-        franchises of all time.
+          The series was originally published in English by two major publishers, Bloomsbury in the United Kingdom and
+          Scholastic Press in the United States. A play, Harry Potter and the Cursed Child, based on a story co-written
+          by
+          Rowling, premiered in London on 30 July 2016 at the Palace Theatre, and its script was published by Little,
+          Brown. The original seven books were adapted into an eight-part namesake film series by Warner Bros. Pictures,
+          which is the third highest-grossing film series of all time as of February 2020. In 2016, the total value of
+          the
+          Harry Potter franchise was estimated at $25 billion,[4] making Harry Potter one of the highest-grossing media
+          franchises of all time.
 
-        A series of many genres, including fantasy, drama, coming of age, and the British school story (which includes
-        elements of mystery, thriller, adventure, horror, and romance), the world of Harry Potter explores numerous
-        themes and includes many cultural meanings and references.[5] According to Rowling, the main theme is death.[6]
-        Other major themes in the series include prejudice, corruption, and madness.[7]
+          A series of many genres, including fantasy, drama, coming of age, and the British school story (which includes
+          elements of mystery, thriller, adventure, horror, and romance), the world of Harry Potter explores numerous
+          themes and includes many cultural meanings and references.[5] According to Rowling, the main theme is
+          death.[6]
+          Other major themes in the series include prejudice, corruption, and madness.[7]
 
-        The success of the books and films has allowed the Harry Potter franchise to expand with numerous derivative
-        works, a travelling exhibition that premiered in Chicago in 2009, a studio tour in London that opened in 2012, a
-        digital platform on which J. K. Rowling updates the series with new information and insight, and a pentalogy of
-        spin-off films premiering in November 2016 with Fantastic Beasts and Where to Find Them, among many other
-        developments. Most recently, themed attractions, collectively known as The Wizarding World of Harry Potter, have
-        been built at several Universal Parks & Resorts amusement parks around the world.
+          The success of the books and films has allowed the Harry Potter franchise to expand with numerous derivative
+          works, a travelling exhibition that premiered in Chicago in 2009, a studio tour in London that opened in 2012,
+          a
+          digital platform on which J. K. Rowling updates the series with new information and insight, and a pentalogy
+          of
+          spin-off films premiering in November 2016 with Fantastic Beasts and Where to Find Them, among many other
+          developments. Most recently, themed attractions, collectively known as The Wizarding World of Harry Potter,
+          have
+          been built at several Universal Parks & Resorts amusement parks around the world.
+        </div>
       </div>
       <div class="home-header">
         Books written by J. K. Rowling
@@ -132,7 +123,7 @@
           </div>
         </div>
         <div class="book-grouping">
-          <img class="book-img" src="images/Prisoner-of-Azkaban.webp">
+          <img class="book-img" src="images/Prisoner-of-Azkaban.webp" alt="prisoner of azkaban">
           <div class="book-text-container">
             <div class="book-header">Prisoner of Azkaban</div>
             <div class="book-txt">
@@ -147,7 +138,7 @@
 
         </div>
         <div class="book-grouping">
-          <img class="book-img" src="images/Goblet-of-FIre-4.webp">
+          <img class="book-img" src="images/Goblet-of-FIre-4.webp" alt="goblet of fire">
           <div class="book-text-container">
             <div class="book-header">Goblet of Fire</div>
             <div class="book-txt">
@@ -163,7 +154,7 @@
           </div>
         </div>
         <div class="book-grouping">
-          <img class="book-img" src="images/Order-of-the-Phoenix-5.webp">
+          <img class="book-img" src="images/Order-of-the-Phoenix-5.webp" alt="order of the phoenix">
           <div class="book-text-container">
             <div class="book-header">Order of the Phoenix</div>
             <div class="book-txt">
@@ -178,7 +169,7 @@
           </div>
         </div>
         <div class="book-grouping">
-          <img class="book-img" src="images/Half-blood-Prince-6.webp">
+          <img class="book-img" src="images/Half-blood-Prince-6.webp" alt="half blood prince">
           <div class="book-text-container">
             <div class="book-header">Half Blood Prince</div>
             <div class="book-txt">
@@ -194,7 +185,7 @@
           </div>
         </div>
         <div class="book-grouping">
-          <img class="book-img" src="images/Deathly-Hallows-7.webp">
+          <img class="book-img" src="images/Deathly-Hallows-7.webp" alt="deathly hallows">
           <div class="book-text-container">
             <div class="book-header">Deathly Hallows</div>
             <div class="book-txt">
@@ -209,7 +200,7 @@
           </div>
         </div>
         <div class="book-grouping">
-          <img class="book-img" src="images/Cursed-Child-8.webp">
+          <img class="book-img" src="images/Cursed-Child-8.webp" alt="cursed child">
           <div class="book-text-container">
             <div class="book-header">Cursed Child</div>
             <div class="book-txt">
@@ -230,7 +221,7 @@
 
       <div class="movies">
         <div class="movie-grouping">
-          <img class="movie-img" src="images/Movie-Philosipher's-stone.jpg">
+          <img class="movie-img" src="images/Movie-Philosipher's-stone.jpg" alt="philosipher's stone">
           <div class="movie-text-container">
             <div class="movie-header">Philosipher's Stone</div>
             <div class="movie-txt">
@@ -245,7 +236,7 @@
           </div>
         </div>
         <div class="movie-grouping">
-          <img class="movie-img" src="images/Movie-chamber-of-secrets.jpg">
+          <img class="movie-img" src="images/Movie-chamber-of-secrets.jpg" alt="chamber of secrets">
           <div class="movie-text-container">
             <div class="movie-header">Chamber of Secrets</div>
             <div class="movie-txt">
@@ -260,7 +251,7 @@
           </div>
         </div>
         <div class="movie-grouping">
-          <img class="movie-img" src="images/Movie-Prisoner-of-azkaban.jpg">
+          <img class="movie-img" src="images/Movie-Prisoner-of-azkaban.jpg" alt="prisoner of azkaban">
           <div class="movie-text-container">
             <div class="movie-header">Prisoner of Azkaban</div>
             <div class="movie-txt">
@@ -275,7 +266,7 @@
           </div>
         </div>
         <div class="movie-grouping">
-          <img class="movie-img" src="images/Movie-Goblet-of-Fire.jpg">
+          <img class="movie-img" src="images/Movie-Goblet-of-Fire.jpg" alt="goblet of fire">
           <div class="movie-text-container">
             <div class="movie-header">Goblet of Fire</div>
             <div class="movie-txt">
@@ -290,7 +281,7 @@
           </div>
         </div>
         <div class="movie-grouping">
-          <img class="movie-img" src="images/Movie-Order-of-the-Phoenix.jpg">
+          <img class="movie-img" src="images/Movie-Order-of-the-Phoenix.jpg" alt="order of the phoenix">
           <div class="movie-text-container">
             <div class="movie-header">Order of the Phoenix</div>
             <div class="movie-txt">
@@ -307,7 +298,7 @@
           </div>
         </div>
         <div class="movie-grouping">
-          <img class="movie-img" src="images/Movie-Half-Blood-Prince.jpg">
+          <img class="movie-img" src="images/Movie-Half-Blood-Prince.jpg" alt="half blood prince">
           <div class="movie-text-container">
             <div class="movie-header">Half Blood Prince</div>
             <div class="movie-txt">
@@ -319,10 +310,10 @@
               key to Lord Voldemort's downfall.
             </div>
           </div>
-          </div>
-          <div class="movie-grouping">
-          
-          <img class="movie-img" src="images/Movie-Deathly-Hallows-1.jpg">
+        </div>
+        <div class="movie-grouping">
+
+          <img class="movie-img" src="images/Movie-Deathly-Hallows-1.jpg" alt="deathly hallows 1">
           <div class="movie-text-container">
             <div class="movie-header">Deathly Hallows Part 1</div>
             <div class="movie-txt">
@@ -333,10 +324,10 @@
               and features an ensemble cast.
             </div>
           </div>
-          </div>
+        </div>
 
         <div class="movie-grouping">
-          <img class="movie-img" src="images/Movie-Deathly-Hallows-2.jpg">
+          <img class="movie-img" src="images/Movie-Deathly-Hallows-2.jpg" alt="deathly hallows 2">
           <div class="movie-text-container">
             <div class="movie-header">Deathly Hallows Part 2</div>
             <div class="movie-txt">
@@ -356,7 +347,7 @@
 
 
       <div class="footer">
-        footer
+        Copyright @2021 All Rights Reserved
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -369,7 +360,7 @@
       integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
       crossorigin="anonymous"></script>
     <script src="script.js"></script>
-
+  </div>
 </body>
 
 </html>
